# mbrlax

./: .gitignore  README.md  pyproject.toml
experiments/: particles_es.ipynb  reproduce_mm_results.ipynb  test_individual_components.ipynb  test_policy.ipynb  test_transition_model.ipynb
mbrlax/: __init__.py  harness.py  settings.py
mbrlax/agents/: __init__.py  pilco_agent.py
mbrlax/inference_strategy/: __init__.py  conditional_sampling_strategy.py  inference_strategy.py  moment_matching_strategy.py  particle_sampling.py  pathwise_sampling_strategy.py
mbrlax/models/: __init__.py  initializers.py  svgp.py  svgp_gpflow.py  utils.py
mbrlax/optimizers/: __init__.py  adam.py  cmaes.py  lbfgs.py  sgd.py  value_and_grads.py
mbrlax/policy/: __init__.py  gp_policy.py
mbrlax/transition_model/: __init__.py  gp_transition_model.py
mbrlax/utils/: __init__.py  driver.py  environment_model.py  initial_state_model.py  metrics.py  objective.py  replay_buffer.py  sampling.py  solvers.py  structures.py
tests/: test_gradients.ipynb
